--- a/public/website/assets/css/style.css
+++ b/public/website/assets/css/style.css
@@ -70,22 +70,174 @@ h1,h2,h3,h4,h5,h6{
     padding: .5rem 1rem;
 }
 /*Header CSS*/
+.banner-slider .slick-dots{
+    bottom: 2rem;
+    width: 90%;
+    left: 5%;
+    display: flex;
+    justify-content: flex-end;
+}
+.banner-slider .slick-dots button{
+    display: none;
+}
+.banner-slider .slick-dots li{
+    width: 50px;
+    height: 5px;
+    border-radius: 20px;
+    background-color: #969696;
+    transition: .3s ease;
+}
+.banner-slider .slick-dots li.slick-active{
+    background-color: #FF6600;
+}
 .apply-form{
     background-color: #000;
     background-image: url(../images/formbg.jpg);
     background-size: cover;
     background-position: center;
 }
+.form_loader{
+    opacity: 0;
+    visibility: hidden;
+    transition: .5s ease;
+    background-color: rgba(0,0,0,.6);
+}
+.form_loader.active{
+    opacity: 1;
+    visibility: visible;
+}
+.lds-spinner,
+.lds-spinner div,
+.lds-spinner div:after {
+  box-sizing: border-box;
+}
+.lds-spinner {
+  color: #FF6600;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3.2px;
+  left: 36.8px;
+  width: 6.4px;
+  height: 17.6px;
+  border-radius: 20%;
+  background: currentColor;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 
 
 
+
+@media(min-width:992px) and (max-width:1199px){
+    .banner-slider .bimgwrap{
+        height: 60vw;
+    }
+    .banner-slider .bimgwrap > img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+}
+@media(min-width:768px) and (max-width:991px){
+    .banner-slider .bimgwrap{
+        height: 60vw;
+    }
+    .banner-slider .bimgwrap > img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+}
+@media (max-width:767px){
+    .banner-slider .bimgwrap{
+        height: 100vw;
+    }
+    .banner-slider .bimgwrap > img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+}
 
 @media (max-width:575px){
+    .banner-slider .bimgwrap{
+        height: calc(100vh - 100px);
+    }
     .apply-form{
         background-image: url(../images/formbg_mobile.jpg);
         background-size: 100%;
         background-position: top;
         background-repeat: repeat-y;
     }
+    .sec-title{font-size: 3rem;}
+    .desc.md{font-size: 1rem;}
 }
